<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/idcard"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/mobilenumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:inputType="number"
            android:maxLength="10"
            android:drawableEnd="@drawable/smartphone"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/from">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/From"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/homeicon"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/whom_to_visit">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/To"
            android:padding="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/man"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/id_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:drawableEnd="@drawable/idcard"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/person_photo"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/personPhoto"
        android:layout_width="346dp"
        android:layout_height="90dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:srcCompat="@drawable/camera"/>

    <TextView
        android:id="@+id/personId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/id_photo"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/idPhoto"
        android:layout_width="353dp"
        android:layout_height="90dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:srcCompat="@drawable/camera" />

    <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#E6821E"
        android:text="@string/submit" />
</LinearLayout>